# Call_Me_Maybe

./: .gitignore  Makefile  README.md  number_test.sh  pyproject.toml  run_in_goinfre.sh  setup.cfg  test.py  tt
data/input/: function_calling_tests.json  functions_definition.json  functions_numbers_only_test.json  prompts_numbers_adversarial.json  prompts_numbers_easy.json  prompts_numbers_hard.json  prompts_numbers_medium.json
data/output/: function_calling_results.json
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  constrained_decoding.py  imports.py  json_constrained.py  json_definitions.py  outputing.py  parser.py  prompting.py  solver.py  tokenizer_map.py
src/constrained_decoding/: __init__.py  function_extraction.py  llm_helpers.py  param_extraction.py
tests/: test_postprocessing.py
