[project]
name = "call-me-maybe"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pydantic",
  "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "./llm_sdk" }

[dependency-groups]
dev = [
  "flake8",
  "mypy",
  "pytest>=9.0.3",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
mypy_path = "llm_sdk"
exclude = ["llm_sdk/"]

[[tool.mypy.overrides]]
module = ["llm_sdk", "llm_sdk.*"]
ignore_errors = true
